test_scores/negative_dimers/features/Q6P1K2.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6P1K2.pkl.xz